# Agentic-OS

./: .gitignore  README.md
docs/: GLOSSARY.md  POSITIONING.md  PROFESSOR-FIT.md  hivemind-command-reference.md  hivemind-os-knowledge-dump.md  hivemind-os-theory-of-changes.md
hivemind/: Cargo.toml  README.md  demo.ps1
hivemind/hivemind-kernel/: Cargo.toml
hivemind/hivemind-kernel/src/: agent.rs  api.rs  blob.rs  hive.rs  lib.rs  llm.rs  memory.rs
hivemind/hivemind-observer/: Cargo.toml
hivemind/hivemind-observer/src/: graph_view.rs  layout.rs  main.rs  sidebar.rs
hivemind/hivemind-os/: Cargo.toml  ai-bench-multi.py  ai-bench.py  hive-cli.ps1  hive-llm-bridge.py  redteam.py  redteam_tcp.py  run-os.ps1  rust-toolchain.toml  x86_64-hivemind-os.json
hivemind/hivemind-os/.cargo/: config.toml
hivemind/hivemind-os/src/: allocator.rs  boot_anim.rs  desktop.rs  gdt.rs  interrupts.rs  llm.rs  main.rs  memory.rs  mouse.rs  rtc.rs  serial.rs  shell.rs  sysinfo.rs  vga_buffer.rs
hivemind/hivemind-os/src/agent/: mod.rs
hivemind/hivemind-os/src/disk/: mod.rs  persist.rs
hivemind/hivemind-os/src/hive/: blob.rs  memory_node.rs  mod.rs
hivemind/hivemind-os/src/net/: mod.rs
hivemind/hivemind-os/src/vfs/: mod.rs
hivemind/hivemind-vos/: Cargo.toml
hivemind/hivemind-vos/src/: api.rs  main.rs  mesh_bridge.rs  vm.rs
hivemind/scripts/: run-two-hivemind-vms.ps1
