[workspace]
resolver = "2"
members = [
    "hivemind-kernel",
    "hivemind-vos",
    "hivemind-observer",
]

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "native-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23", features = ["v4", "serde"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
