[package]
name = "hivemind-observer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.34"
egui = "0.34"
reqwest = { version = "0.13", features = ["json", "native-tls", "blocking"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "hivemind-observer"
path = "src/main.rs"
